Fix bootstrap and add layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,6 +9,35 @@
   </head>
 
   <body>
-    <%= yield %>
+  	<div class="row">
+  		<div class="header-content col-md-12">
+  			<nav class="navbar navbar-expand-md navbar-light" style="background-color: #C0C0C0;">
+	  			<a href="#" class="navbar-brand">InstaMes</a>
+	  			<button class="navbar-toggler" data-toggle="collapse" data-target="#collapsableContent">
+	  				<span class="navbar-toggler-icon"></span>
+	  			</button>
+	  			<div class="collapse navbar-collapse" id="collapsableContent">
+	  				<ul class="navbar-nav">
+	  					<li class="nav-item"><a href="/" class="nav-link">My messages</a></li>
+	  					<li class="nav-item"><a href="/friends" class="nav-link">My friends</a></li>
+	  				</ul>
+	  			</div>
+  			</nav>
+  		</div>
+  		<div class="content col-md-12">
+	        <%= yield %>
+	    </div>
+	    <div class="footer col-md-12" style="margin-top: 20px">
+          <nav class="navbar" style="background-color: #000080; color:#ff0";">@CREATED BY 1412410_1412105
+            <nav class="nav navbar-nav pull-xs-left">
+                    <a class="nav-item nav-link" href="/">Home</a>
+                    <a class="nav-item nav-link" href="#">About</a>
+                    <a class="nav-item nav-link" href="#">Help</a>
+                </nav>
+              </nav>
+        </div>
+  	</div>
   </body>
 </html>
+
+
