--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <div class="container">
+
       <div class="row" style="background-color: #C0C0C0;">
         <div class="header-content col-md-12" style="margin-bottom: 10px;">
           <nav class="navbar navbar-expand-md navbar-light navbar-sticky-top" style="background-color: #C0C0C0;">
@@ -18,9 +18,9 @@
             </a>
             <div class="collapse navbar-collapse" id="navbar-collapse-content">
               <ul class="navbar-nav">
-                <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
-                <li class="nav-item"><a href="/friend" class="nav-link">Friends</a></li>
-                <li class="nav-item"><a href="/conversation" class="nav-link">Conversations</a></li>
+                <li class="nav-item"><a href="/userlist" class="nav-link">User list</a></li>
+                <li class="nav-item"><a href="/friends" class="nav-link">Friends</a></li>
+                <li class="nav-item"><a href="/" class="nav-link">Messages</a></li>
                 <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
               </ul>
               <ul class="navbar-nav ml-auto">
@@ -53,7 +53,7 @@
             </button>
         </div>
       </div>
-      <div class="row" style="background-color: #d2d1da;">
+      <div class="row">
         <div class="content col-md-12  mx-auto" style=" margin: 30px 0px;">
               <%= yield %>
         </div>
@@ -68,7 +68,7 @@
           </nav>
         </div>
       </div>
-    </div>
+
   </body>
 </html>
 
