--- a/app/views/friends/show.html.erb
+++ b/app/views/friends/show.html.erb
@@ -3,7 +3,7 @@
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-5">
-			<% @users.friends.each do |friend| %>
+			<% @friends.each do |friend| %>
 				<div class="card">
 				  <div class="card-block" align="middle">
 				  	<img  src="<%= friend.user.cover %>" alt="avatar" width="60%">
