--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,12 +14,14 @@
         <div class="header-content col-md-12" style="margin-bottom: 10px;">
           <nav class="navbar navbar-expand-md navbar-light navbar-sticky-top" style="background-color: #C0C0C0;">
             <a href="/" class="navbar-brand">
-              RAILS
+              InstaMess
             </a>
             <div class="collapse navbar-collapse" id="navbar-collapse-content">
               <ul class="navbar-nav">
                 <li class="nav-item"><a href="/userlist" class="nav-link">User list</a></li>
-                <li class="nav-item"><a href="/friends" class="nav-link">Friends</a></li>
+                <% if session[:current_user] %>
+                <li class="nav-item"><%= link_to "My Friends", friend_path(session[:current_user]["user_id"]), class: "nav-link" %></li>
+                <% end %>
                 <li class="nav-item"><a href="/" class="nav-link">Messages</a></li>
                 <li class="nav-item"><a href="/about" class="nav-link">About</a></li>
               </ul>
