--- a/app/views/userlist/index.html.erb
+++ b/app/views/userlist/index.html.erb
@@ -1,11 +1,10 @@
-<h1>ALL ABOARD THE SHIP TO WONDERLAND!</h1>
 <div class="container">
 	<div class="row">
 		<div class="col-md-3"></div>
 		<div class="col-md-5">
 			<% @users.each do |user| %>
 				<div class="card">
-				  <div class="card-block">
+				  <div class="card-block" align="middle">
 				  	<img  src="<%= user.cover %>" alt="avatar" width="60%">
 				    <h4 class="card-title"><%= user.user_name %></h4>
 				    <p class="card-text"><%= user.email %></p>
